--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,6 @@
   {% include jquery.html %}
   {% include twbs.html %}
 
-  <link rel="stylesheet" href="monokai.css"/>
+  <link rel="stylesheet" href="css/monokai.css"/>
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 </head>
